--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Please contact Roberta for detailed pricing information and to check availabilit
 
 		<ul id="nv-primary-navigation-main" class="primary-menu-ul nav-ul"><li id="menu-item-171" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-164 current_page_item menu-item-171"><a href="index.html" aria-current="page">Home</a></li>
 <li id="menu-item-418" class="menu-item menu-item-type-post_type menu-item-object-courses menu-item-418"><a href="courses/online-sessions/index.html">Log In</a></li>
-<li id="menu-item-418" class="menu-item menu-item-type-post_type menu-item-object-courses menu-item-418"><a href="invest.html">Invest With Us</a></li>
+<li id="menu-item-418" class="menu-item menu-item-type-post_type menu-item-object-courses menu-item-418"><a href="https://wa.me/message/LUT5NDWCEUJEM1">Signal Group</a></li>
 </ul>	</div>
 </div>
 
@@ -282,7 +282,7 @@ Please contact Roberta for detailed pricing information and to check availabilit
 
 		<ul id="nv-primary-navigation-sidebar" class="primary-menu-ul nav-ul"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-164 current_page_item menu-item-171"><a href="index.html" aria-current="page">Home</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-courses menu-item-418"><a href="courses/online-sessions/index.html">Log In</a></li>
-<li class="menu-item menu-item-type-post_type menu-item-object-courses menu-item-418"><a href="invest.html">Invest With Us</a></li>
+<li class="menu-item menu-item-type-post_type menu-item-object-courses menu-item-418"><a href="https://wa.me/message/LUT5NDWCEUJEM1">Signal Group</a></li>
 </ul>	</div>
 </div>
 
@@ -598,7 +598,7 @@ Please contact Roberta for detailed pricing information and to check availabilit
 					<div class="eael-pricing style-1" >
 	<div class="eael-pricing-item ">
 		<div class="header">
-			<h2 class="title">Basic Membership</h2>
+			<h2 class="title">Bronze Membership</h2>
 		</div>
 		<div class="eael-pricing-tag">
 			<span class="price-tag"><span class="original-price"><span class="price-currency">$</span>220</span></span>
@@ -868,7 +868,7 @@ Please contact Roberta for detailed pricing information and to check availabilit
 		data-section="footer_copyright"
 		data-item-id="footer_copyright">
 	<div class="component-wrap">
-	© 2019-2022 by Forex Rockstar. All rights reserved.</div>
+	© 2019-2024 by Forex Rockstar. All rights reserved.</div>
 
 	</div>
 
